# rust-fcb1010

./: Cargo.toml  README.md  config.json
src/: main.rs
