[package]
name = "rust-fcb1010"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
midir = "0.10.0"
serde = { verion = "1.0.203", features = ["derive"] }
serde_arrays = "0.1.0"
serde_derive = "1.0.203"
serde_json = "1.0.120"
